--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -1,18 +1,15 @@
 {
   "compilerOptions": {
-    "target": "ES2021",
-    "module": "ESNext",
-    "lib": ["ES2021"],
-    "moduleResolution": "Node",
-    "esModuleInterop": true,
+    "target": "ES2022",                     
+    "module": "commonjs",                   
+    "rootDir": "./src",                     
+    "outDir": "./dist",                     
+    "strict": true,                         
+    "moduleResolution": "node",             
+    "esModuleInterop": true,                
     "forceConsistentCasingInFileNames": true,
-    "strict": true,
-    "skipLibCheck": true,
-    "outDir": "dist",
-    "baseUrl": "./",
-    "paths": {
-      "@/*": ["src/*"]
-    }
+    "skipLibCheck": true   ,
+    "typeRoots": ["./node_modules/@types", "./types"]                 
   },
   "include": ["src"],
   "exclude": ["node_modules", "dist"]
